--- a/IsEmirleri.Web/Views/User/Index.cshtml
+++ b/IsEmirleri.Web/Views/User/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     int count = 0;
 }
 
@@ -53,24 +52,24 @@
                     dataSrc: 'data'
                 },
                 columns: [
-                     
+
                     { data: 'id', title: 'Sıra No' },
                     {
                         data: 'picture', title: 'Fotoğraf', render: function (data) {
                             return data ? `<img src="/Files/UserPhotos/${data}" style="width:50px; height:50px; border-radius:50%" />`
                                 : `<div class="rounded-circle header-profile-user" style="width:50px; height:50px; background-color:#ccc; display:flex; align-items:center; justify-content:center;">
-                                 <i class="fa fa-user" style="color:#fff;"></i> </div>`;
+                                         <i class="fa fa-user" style="color:#fff;"></i> </div>`;
                         }
                     },
                     { data: 'email', title: 'Kullanıcı Maili' },
                     { data: 'password', title: 'Kullanıcı Şifre' },
                     { data: 'customerName', title: 'Şirket Adı' },
-                    {data: 'taskCount', title: 'Task Sayısı'},
-                    {data: 'projectCount', title: 'Proje Sayısı'},
+                    { data: 'taskCount', title: 'Task Sayısı' },
+                    { data: 'projectCount', title: 'Proje Sayısı' },
                     {
                         data: 'id', title: 'İşlemler', render: function (data, type, row) {
                             return `<button onclick="deleteUser(${data}, this)" class="btn btn-danger"><i class="uil uil-trash-alt"></i></button>
-                                    <button onclick="updateUser(${data}, this)" class="btn btn-success"><i class="uil uil-pen"></i></button>`;
+                                            <button onclick="updateUser(${data}, this)" class="btn btn-success"><i class="uil uil-pen"></i></button>`;
                         }
                     }
                 ]
@@ -110,8 +109,15 @@
                         success: function (res) {
                             if (res.result) {
                                 $("#modalAdd").modal("hide");
-                                data.user.id = res.userId;
-                                DataTable.row.add(data.user).draw();
+                               let newUser = {
+                                  id: res.userId,
+                                  email: email,
+                                  password: password,
+                                  customerName: res.customerName, 
+                                  taskCount: "0", 
+                                  projectCount: "0"
+                                  };
+                                DataTable.row.add(newUser).draw();
                                 toastr.success(res.message);
                             } else {
                                 Swal.fire({
@@ -137,7 +143,7 @@
 
             window.deleteUser = function (userId, button) {
 
-       
+
                 Swal.fire({
                     title: "Silmek İstediğinize Emin Misiniz?",
                     text: "Bu işlem geri alınamayacaktır.",
