--- a/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
@@ -29,17 +29,11 @@
         </li>
 
         <li>
-            <a href="javascript:void(0);" class="has-arrow waves-effect">
-                <i class="fas fa-file-alt"></i>
-                
+            <a asp-controller="Mission" asp-action="Raports">
+                <i class="dripicons-pencil"></i>
                 <span>Raporlar</span>
+               
             </a>
-            <ul class="sub-menu" aria-expanded="false">
-                <li><a href="@Url.Action("Index", "Status")"><b>Zaman Takibi Raporları</b></a></li>
-                <li><a href="@Url.Action("Index", "Priority")"><b>Proje İlerleme Raporları</b></a></li>
-                <li><a href="@Url.Action("Index", "Priority")"><b>Görev Durumu Raporları</b></a></li>
-                <li><a href="@Url.Action("Index", "Priority")"><b>Görev Süre Analizi</b></a></li>
-            </ul>
         </li>
 
         <li>
