--- a/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
@@ -29,11 +29,16 @@
         </li>
 
         <li>
-            <a asp-controller="Mission" asp-action="Raports">
+            <a href="javascript:void(0);" class="has-arrow waves-effect">
                 <i class="dripicons-pencil"></i>
                 <span>Raporlar</span>
-               
             </a>
+            <ul class="sub-menu" aria-expanded="false">
+                <!-- Kişisel Rapor -->
+                <li><a href="@Url.Action("Raports", "Mission")"><i class="dripicons-user"></i> Kişisel Rapor</a></li>
+                <!-- Genel Rapor -->
+                <li><a href="@Url.Action("TaskDistribution", "Mission")"><i class="dripicons-graph-bar"></i> Genel Rapor</a></li>
+            </ul>
         </li>
 
         <li>
