--- a/IsEmirleri.Web/Views/Mission/Raports.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Raports.cshtml
@@ -45,31 +45,19 @@
                             return `<a href="/Mission/Productivity/${data}" title="Verimlilik Analizi" class="btn uil-users-alt fs-6 btn-light"><i class="uil uil-chart-pie"></i></a>`;
                         }
                     },
-                    {
-                        data: 'id', title: 'Rapor 2', render: function (data, type, row) {
-                            return `<button onclick="deleteUser(${data}, this)" class="btn btn-danger"><i class="uil uil-trash-alt"></i></button>`;
-                        }
-                    },
+                
 
-                            {
+                    {
                         data: 'id',
-                        title: 'Verimlilik',
+                        title: 'Süre Verisi',
                         render: function (data, type, row) {
                             return `<a href="/Mission/CompletionTime/${data}" title="Verimlilik Analizi" class="btn uil-users-alt fs-6 btn-light">
                             <i class="uil uil-chart-pie"></i>
                         </a>`;
-
-                    {
-                        data: 'id', title: 'Rapor 3', render: function (data, type, row) {
-                            return `<button onclick="deleteUser(${data}, this)" class="btn btn-danger"><i class="uil uil-trash-alt"></i></button>`;
-
                         }
                     },
-                    {
-                        data: 'id', title: 'Rapor 4', render: function (data, type, row) {
-                            return `<button onclick="deleteUser(${data}, this)" class="btn btn-danger"><i class="uil uil-trash-alt"></i></button>`;
-                        }
-                    },
+
+                    
                 ]
             });
         });
