--- a/IsEmirleri.Web/Views/Mission/Raports.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Raports.cshtml
@@ -38,7 +38,8 @@
                     { data: 'email', title: 'Kullanıcı Maili' },
                     {
                         data: 'id', title: 'Verimlilik', render: function (data, type, row) {
-                            return `<a href="/Mission/Productivity/${data}" title="Verimlilik Analizi" class="btn uil-users-alt fs-6 btn-light"><i class="uil uil-chart-pie"></i></a>`;
+                            return `<a href="/Mission/Productivity/${data}" title="Verimlilik Analizi" class="btn uil-users-alt fs-6 btn-light"><i class="uil uil-chart"></i>
+        </a>`;
                         }
                     },
                 
