--- a/IsEmirleri.Web/Views/Shared/_UserMenu.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_UserMenu.cshtml
@@ -7,7 +7,11 @@
         <li class="menu-title">Menu</li>
 
         <li>
-            <a asp-controller="Project" asp-action="Index"> <i class="fas fa-project-diagram"></i><span>Projeler</span></a>
+            <a asp-controller="Project" asp-action="Index">
+                <i class="fas fa-project-diagram"></i>
+                <span>Projeler</span>
+                <span id="projectCount" class="badge rounded-pill bg-info float-end"></span>
+            </a>
         </li>
 
         <li>
@@ -32,6 +36,9 @@
             setInterval(() => {
                 connection.invoke("GetUserInformationCounts", @User.FindFirst(ClaimTypes.UserData)?.Value)
                     .catch(err => console.error("Error invoking GetUserInformationCounts:", err));
+
+                connection.invoke("GetProjectCount", @User.FindFirst(ClaimTypes.UserData)?.Value)
+                    .catch(err => console.error("Error invoking GetProjectCount:", err));
             }, 5000);
         })
         .catch((err) => {
@@ -44,5 +51,12 @@
         $("#userInformationCounts").append(`
                     <span class="badge rounded-pill bg-info float-end">${value.taskCount}</span>
                 `);
+    });
+    connection.on("ProjectCount", (value) => {
+        $("#projectCount").empty();
+
+        $("#projectCount").append(`
+                                <span class="badge rounded-pill bg-info float-end">${value.projectCount}</span>
+                            `);
     });
 </script>
