--- a/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_AdminMenu.cshtml
@@ -31,7 +31,7 @@
 
         <li>
             <a href="javascript:void(0);" class="has-arrow waves-effect">
-                <i class="dripicons-pencil"></i>
+                <i class="fas fa-clipboard-list"></i>
                 <span>Raporlar</span>
             </a>
             <ul class="sub-menu" aria-expanded="false">
