--- a/IsEmirleri.Web/Views/User/Index.cshtml
+++ b/IsEmirleri.Web/Views/User/Index.cshtml
@@ -64,7 +64,7 @@
                     { data: 'email', title: 'Kullanıcı Maili' },
                     { data: 'password', title: 'Kullanıcı Şifre' },
                     { data: 'customerName', title: 'Şirket Adı' },
-                    { data: 'taskCount', title: 'Task Sayısı' },
+                    { data: 'taskCount', title: 'Görev Sayısı' },
                     { data: 'projectCount', title: 'Proje Sayısı' },
                     {
                         data: 'id', title: 'İşlemler', render: function (data, type, row) {
