Gereksiz jpg fotoğraflar silindi.

--- a/IsEmirleri.Web/Views/User/Profile.cshtml
+++ b/IsEmirleri.Web/Views/User/Profile.cshtml
@@ -51,7 +51,7 @@
 
                             {
                                 <tr>
-                                    <td colspan="2" class="text-center">Hiç görev geçmişi bulunmamaktadır.</td>
+                                    <td colspan="2" class="text-center">Görev geçmişi bulunmamaktadır.</td>
                                 </tr>
                             }
                         </tbody>
