Sayfa düzenlemeleri ve readme için döküman yükleme.

--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -110,7 +110,7 @@
         <div class="d-flex ">
             <div id="content" class="d-flex flex-wrap p-2 col-12" style="background-color: #f8f9fa;">
             </div>
-            <a href="#" title="Yeni Durum Ekle" id="btnStatusadd" class="btn btn-lg">
+            <a href="#" title="Yeni Durum Ekle" id="btnStatusadd" class="btn btn-sm my-4 mx-2">
                 <i class="uil-plus" style="font-size: 2rem;"></i>
             </a>
 
@@ -150,7 +150,7 @@
         <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">
+                    <h5 class="modal-title" id="modalTitle">Yeni Görev Ataması
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -490,7 +490,7 @@
                                                                                                                 <div class="card card-clickable" id="task-${item.id}" draggable="true" ondragstart="drag(event)" ondrop="preventDrop(event)" ondragover="preventDragOver(event)"  style="cursor: pointer; transition: background-color 0.3s, box-shadow 0.3s;" onclick="showMissionDetails(${item.id})">
                                                                     <div class="card-body">
                                                                         <div class="d-flex align-items-start justify-content-between">
-                                                                            <h5 class="card-title">#${item.id} ${item.title}</h5>
+                                                                            <h5 class="card-title" style="font-weight: bold;">#${item.id} ${item.title}</h5>
                                                                             <div class="email-icons">
                                                                                 ${emails}
                                                                             </div>
